--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout
     android:layout_height="match_parent"
-    tools:context="com.example.psm71.musicplayer.MainActivity">
+    android:layout_width="match_parent"
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal">
+
     <android.support.v7.widget.Toolbar
-        android:layout_width="fill_parent"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="56dp"
         android:background="#1ABC9C"
-        android:paddingTop="3dp"
-        android:paddingEnd="3dp" >
+        android:paddingEnd="3dp"
+        android:paddingTop="3dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:src="@drawable/menu_button" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="5"
+                android:paddingLeft="12dp"
+                android:text="앱 이름"
+                android:textColor="#FFFFFF"
+                android:textSize="22dp"
+                android:typeface="sans" />
 
         <ImageView
+            android:id="@+id/imageView"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@drawable/menu_button" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="12dp"
-            android:text="앱 이름"
-            android:textColor="#FFFFFF"
-            android:textSize="22dp"
-            android:typeface="sans"
-            />
+            android:layout_weight="1"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/search_button" />
+        </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
-</android.support.constraint.ConstraintLayout>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/music_listview"/>
+
+</LinearLayout>
