--- a/app/src/main/res/layout/music_list_view.xml
+++ b/app/src/main/res/layout/music_list_view.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="360dp"
+    android:layout_width="match_parent"
     android:layout_height="70dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#EEEEEE"
     android:alpha="33"
     >
     <com.example.psm71.musicplayer.widget.CircleImageView
@@ -26,6 +27,8 @@
             android:layout_width="match_parent"
             android:layout_height="26dp"
             android:layout_marginTop="10dp"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:textSize="16dp"
             android:text="제목" />
 
@@ -33,6 +36,8 @@
             android:id="@+id/music_artist"
             android:layout_width="match_parent"
             android:layout_height="20dp"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textSize="16dp"
             android:text="아티스트" />
     </LinearLayout>
