--- a/app/src/main/res/layout/music_all_list.xml
+++ b/app/src/main/res/layout/music_all_list.xml
@@ -8,8 +8,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/all_list">
+        android:id="@+id/all_list"/>
 
-    </ListView>
 
 </RelativeLayout>
