--- a/app/src/main/res/layout/music_artist_list.xml
+++ b/app/src/main/res/layout/music_artist_list.xml
@@ -5,13 +5,9 @@
     android:orientation="vertical"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:textSize="30dp"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        android:text="첫번째 페이지"/>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/all_list"/>
 
 </RelativeLayout>
