recyclerview 완료, 전곡 듣기 완료

--- a/app/src/main/res/layout/music_all_list.xml
+++ b/app/src/main/res/layout/music_all_list.xml
@@ -2,13 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/all_list"/>
+        android:id="@+id/recyclerView"
+        app:layoutManager="GridLayoutManager"
+        app:spanCount="3"/>
 
 
 </RelativeLayout>
