--- a/app/src/main/res/layout/music_list_view_box.xml
+++ b/app/src/main/res/layout/music_list_view_box.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="150dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#EEEEEE"
     android:alpha="33"
+    android:orientation="vertical"
     >
-    <com.example.psm71.musicplayer.widget.CircleImageView
-        android:layout_height="60dp"
-        android:layout_width="60dp"
-        android:src="@mipmap/ic_launcher"
-        android:id="@+id/music_cover"
-        app:civ_border_width="2dp"
-        app:civ_border_color="#FFFFFF"
-        android:layout_margin="5dp"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <com.example.psm71.musicplayer.widget.CircleImageView
+            android:id="@+id/music_cover"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"
+            android:src="@mipmap/ic_launcher"
+            app:civ_border_color="#FFFFFF"
+            app:civ_border_width="2dp" />
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -36,10 +41,10 @@
             android:id="@+id/music_artist"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:maxLines="1"
             android:ellipsize="end"
-            android:textSize="16dp"
-            android:text="아티스트" />
+            android:maxLines="1"
+            android:text="아티스트"
+            android:textSize="16dp" />
     </LinearLayout>
 
 </LinearLayout>
