--- a/app/src/main/res/layout/music_all_list.xml
+++ b/app/src/main/res/layout/music_all_list.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#EEEEEE"
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
@@ -10,7 +11,10 @@
         android:layout_height="match_parent"
         android:id="@+id/recyclerView"
         app:layoutManager="GridLayoutManager"
-        app:spanCount="3"/>
+        android:background="#EEEEEE"
+        app:spanCount="3"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
