--- a/app/src/main/res/layout/music_list_view_box.xml
+++ b/app/src/main/res/layout/music_list_view_box.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="150dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="160dp"
     android:alpha="33"
-    android:orientation="vertical"
     android:background="#FFFFFF"
-    >
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
         <com.example.psm71.musicplayer.widget.CircleImageView
@@ -18,25 +19,27 @@
             android:layout_height="90dp"
             android:layout_gravity="center_vertical"
             android:src="@mipmap/ic_launcher"
+
             app:civ_border_color="#EEEEEE"
             app:civ_border_width="3dp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginLeft="5dp">
+        android:layout_marginLeft="5dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/music_title"
             android:layout_width="match_parent"
             android:layout_height="26dp"
-            android:layout_marginTop="10dp"
-            android:singleLine="true"
+            android:layout_marginTop="5dp"
             android:ellipsize="end"
-            android:textSize="16dp"
+            android:singleLine="true"
+            android:text="제목"
             android:textColor="#000000"
-            android:text="제목" />
+            android:textSize="16dp" />
 
         <TextView
             android:id="@+id/music_artist"
